# family_budget_bot

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Procfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.circleci/: config.yml
.github/workflows/: ci.yml
compose/python/: Dockerfile
scripts/: deploy.sh
scripts/db/: create_dump_from_docker.sh  init_tables.sql  release_3_migration.py  release_4_2_migration.py  release_4_migration.py
src/: authentication.py  bot.py  config.py  env.py  handlers.py  keyboards.py  run.py  settings.py  storages.py  tests.py
src/analytics/: __init__.py  domain.py  errors.py  handlers.py  keyboards.py  messages.py  services.py
src/categories/: __init__.py  domain.py  keyboards.py  services.py
src/configurations/: __init__.py  domain.py  errors.py  handlers.py  keyboards.py  messages.py  models.py  services.py  validators.py
src/costs/: __init__.py  domain.py  errors.py  handlers.py  keyboards.py  messages.py  models.py  services.py  validators.py
src/dates/: __init__.py  domain.py  keyboards.py  services.py
src/db/: __init__.py  _postgres.py  _sqlite.py  constants.py  domain.py  errors.py  models.py  protocols.py  services.py
src/db/services/: __init__.py  core.py
src/equity/: __init__.py  domain.py  handlers.py  models.py  services.py
src/finances/: __init__.py  domain.py
src/incomes/: __init__.py  domain.py  errors.py  handlers.py  keyboards.py  messages.py  models.py  services.py
src/messages/: __init__.py  configurations.py  core.py  startup.py  users.py
src/shared/: categories.py  collections.py  domain.py  env.py  errors.py  formatting.py  handlers.py  keyboards.py  messages.py  sequences.py  strings.py  validators.py
src/shared/analytics/: __init__.py  keyboards.py
src/shared/configurations/: __init__.py  constants.py  keyboards.py
src/shared/costs/: __init__.py  keyboards.py
src/shared/dates/: __init__.py  keyboards.py  services.py
src/shared/equity/: __init__.py  keyboards.py
src/shared/finances/: __init__.py  models.py
src/shared/incomes/: __init__.py  keyboards.py
src/startup/: handlers.py  messages.py
src/users/: __init__.py  domain.py  models.py  services.py
