[tool.poetry]
name = "family_budget_bot"
version = "0.1.0"
description = ""
authors = ["Dmytro Parfeniuk <parfeniukink@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "4.4.0"
loguru = "0.6.0"
psycopg2-binary = "2.9.3"
pydantic = "1.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
ipdb = "^0.13.9"
openpyxl = "^3.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ['py39']
line-length = 120
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = '.venv,venv,env'
src_paths = ["src"]
